--- a/limehd/res/values-zh-rTW/strings.xml
+++ b/limehd/res/values-zh-rTW/strings.xml
@@ -51,8 +51,8 @@
        
     <string name="keyboard_list">LIME輸入法切換</string>
     
-    <string name="default_in_english">先使用英文模式</string>
-    <string name="default_in_english_summary">輸入法開啟後先使用英文輸入模式.</string>
+    <string name="persistent_language_mode">記憶中英模式</string>
+    <string name="persistent_language_mode_summary">下次切換前保持中英模式</string>
     <string name="number_row_in_english">數字列英文鍵盤</string>
     <string name="number_row_in_english_summary">在英文鍵盤顯示數字列(5列鍵盤)</string>
     <string name="disable_software_keyboard">關閉軟體鍵盤顯示</string>
