New database loading or not exist message for checkDBConnection.

--- a/limehd/res/values-zh-rCN/strings.xml
+++ b/limehd/res/values-zh-rCN/strings.xml
@@ -484,6 +484,10 @@
     
     <string name="l3_im_database_error">数据库操作错误，请稍待一会重新操作。</string>
     
+    <string name="l3_database_loading">数据库载入中，请稍待…</string>
+    <string name="l3_database_not_exist">数据库不存在，请先下载載数据库</string>
+    
+    
     <string name="l3_tab_bluetooth">蓝牙设定</string>
     
     <string name="l3_im_notice">为了节省记忆体使用空间，我们强烈建议您清空不常使用的输入法字根，或使用空白数据库来载入个别输入法字根档。</string>
