--- a/trunk/limehd/res/values-zh-rCN/strings.xml
+++ b/trunk/limehd/res/values-zh-rCN/strings.xml
@@ -506,6 +506,9 @@
     
     <string name="l3_im_notice">为了节省记忆体使用空间，我们强烈建议您清空不常使用的输入法字根，或使用空白数据库来载入个别输入法字根档。</string>
     
+    <string name="hide_software_keyboard_typing_with_physical">自动隐藏软键盘</string>
+	<string name="hide_software_keyboard_typing_with_physical_summary">以实体键盘打字时隐藏软键盘</string>
+    
     <!-- AD Message -->
     <string name="ad_zippy">蓝芽键盘测试支援\nZIPPY BT-540 蓝芽一对六键盘 - http://www.zippy.com (Sam Lin/sam_lin@hotmail.com)</string>
     
