--- a/limehd/res/values/strings.xml
+++ b/limehd/res/values/strings.xml
@@ -599,7 +599,10 @@
 	
 	<string name="disable_physical_selkey_option">Disable candidate words selection on physical keyboard</string>
 	<string name="reset_db_note">If text cannot be import please reset and download new database from the server.</string>
+
+	<string name="show_arrow_keys">Show arrow keys</string>
 	
+		
 <string name="release_note">
 	    \n** 若文字無法正確輸入，建議您重置資料庫並重新下載或匯入字根檔案, 如果選字與送出的字不同，請關閉喜好設定的中文簡/繁體字碼轉換.\n
 	    \n版本更新說明
