--- a/trunk/limehd/res/values-zh-rTW/strings.xml
+++ b/trunk/limehd/res/values-zh-rTW/strings.xml
@@ -506,8 +506,13 @@
     <string name="hide_software_keyboard_typing_with_physical_summary">以實體鍵盤打字時隱藏軟鍵盤</string>
     
     <string name="show_arrow_keys">顯示方向鍵</string>
-    
-  
+    	<string-array name="show_arrow_keys_options">
+		<item>無</item>
+		<item>軟鍵盤上方</item>
+		<item>軟鍵盤下方</item>
+	</string-array>
+	
+
     
     <!-- AD Message -->
     <string name="ad_zippy">藍芽鍵盤測試支援\nZIPPY BT-540 藍芽一對六鍵盤 - http://www.zippy.com (Sam Lin/sam_lin@hotmail.com)</string>
