--- a/trunk/limehd/res/values/strings.xml
+++ b/trunk/limehd/res/values/strings.xml
@@ -602,6 +602,18 @@
 
 	<string name="show_arrow_keys">Show arrow keys</string>
 	
+	<string-array name="show_arrow_keys_options">
+		<item>none</item>
+		<item>Top of softkeyboard</item>
+		<item>Bottown of softKeyboard</item>
+	</string-array>
+	
+	<string-array name="show_arrow_keys_values">
+		<item>0</item>
+		<item>1</item>
+		<item>2</item>
+	</string-array>
+
 		
 <string name="release_note">
 	    \n** 若文字無法正確輸入，建議您重置資料庫並重新下載或匯入字根檔案, 如果選字與送出的字不同，請關閉喜好設定的中文簡/繁體字碼轉換.\n
