--- a/trunk/limehd/res/values/strings.xml
+++ b/trunk/limehd/res/values/strings.xml
@@ -529,8 +529,7 @@
     <string name="l3_tab_bluetooth">Bluetooth</string>
     <string name="l3_im_notice">For saveing precious device memory space (both RAM and FLASH), IM-tables you are not using are strongly recommeded to be removed.</string>
     
-    <string name="hide_software_keyboard_typing_with_physical">Auto hide soft keyboard</string>
-    <string name="hide_software_keyboard_typing_with_physical_summary">Hide soft keyboard when typing with physical keyboard. Please clear this when using with S-PEN.</string>
+    
     
     <!-- AD Message -->
     <string name="ad_zippy">Bluetooth keyboard experienced device\nZIPPY BT-540 Switch Instantaneously Multi-pairing Bluetooth Keyboard - http://www.zippy.com (Sam Lin/sam_lin@hotmail.com)</string>
@@ -601,6 +600,14 @@
 	<string name="reset_db_note">If text cannot be import please reset and download new database from the server.</string>
 
 	<string name="show_arrow_keys">Show arrow keys</string>
+	
+	<string name="hide_software_keyboard_typing_with_physical">Auto hide soft keyboard</string>
+    <string name="hide_software_keyboard_typing_with_physical_summary">Hide soft keyboard when typing with physical keyboard. Please clear this when using with S-PEN.</string>
+
+    <string name="split_keyboard">Split Keyboard</string>
+    
+    <string name="merge_keyboard">Merge Keyboard</string>
+   
 	
 	<string-array name="show_arrow_keys_options">
 		<item>none</item>
