--- a/limehd/res/values-zh-rCN/strings.xml
+++ b/limehd/res/values-zh-rCN/strings.xml
@@ -360,7 +360,7 @@
     <string name="l3_tab_initial_error">下载失败，请确认装置已连上网路.</string>
     <string name="l3_tab_initial_message">请点选 [预载数据库] OR [空白数据库] 键下载 LIME 数据库或点选 [还原数据库] 键由备份文件中还原</string>
     <string name="l3_initial_btn_load_empty_db">空白数据库</string>
-    <string name="l3_initial_btn_load_phonetic_only_db">仅含注音数据库</string>
+    <string name="l3_initial_btn_load_phonetic_only_db">仅含注音数据库(连打字根)</string>
     <string name="l3_initial_btn_load_phonetic_hs_only_db">仅含注音+华象直觉数据库</string>
     <string name="l3_initial_btn_load_preload_db">预载数据库 \n注音, 仓颉, 仓颉五代 \n快仓, 大易, 轻松　　\n行列, 行列 １０　 　</string>
     <string name="l3_initial_btn_reset_db">重置数据库</string>
@@ -582,19 +582,17 @@
 	<string name="release_note">
 	    \n** 若文字无法正确输入，建议您重置资料库并重新下载或汇入字根档案, 如果选字与送出的字不同，请关闭喜好设定的中文简/繁体字码转换.\n
 	    \n版本更新说明
-	    \n3.7.3-300
-	    \n1. 修正“启动选取排序”或“实体键盘启动选取排序”未勾选时，候选字未依对照表汇入字序列出
-		\n2. 修正实体键盘使用注音输入法，无法用 space 输入一声
-		\n3. 调整行列的实体键盘选字键为 !@#$%^&amp;*()
-		\n4. 调整英文虚拟键盘的popup符号小键盘加上 : 及 ; (英文模式长按 . 或中文模式 shift 后长按 > )
-		\n5. 调整候选列显示
-		\n6. “先启动英文选项”改为“记忆中英模式”，进入输入区时会使用上一次的中文或英文模式
-		\n7. 可用 Zippy BT-540S 键盘的地球键 (语言切换键)，或外接键盘的 WinKey+Space 切换中文/英文输入模式
-		\n8. 新增双色文字虚拟键盘  
-		\n9. 新增华象直觉输入法反查
-		\n10. 新增注音、仓颉 CNS11643 输入法字根快速下载，请至输入法管理中操作 (Andoid系统字型需更换，否则大部份文字无法显示)
-		\n11. 新增喜好设定自动备份，重装 LIME-HD 时自动恢复喜好设定 (需 Android 4.0，部份装置未支援)
-		\n12. 新增 Google 云端备份及还原资料库功能 (使用 Google Docs)
+	    
+		\n3.8.1-311
+		\n1. 修正候选列展开后，画面乱掉问题
+		\n2. 修正连打学习及注音快拼学习问题
+		\n3. 修正候选列候选字 cache 移除问题
+		\n4. 修正字根对照表汇入问题
+		\n5. 修正 Milestone 2 实体键盘 ALT 组合键问题
+		\n6. 修改许氏注音及倚天26/41键注音资料库查询方式，提升反应速度
+		\n7. 修改档案选取模组，已可选取设备有内建空间的外接sdcard上的档案
+		\n8. 新增许氏注音及倚天26键注音符号软体键盘
+		\n9. 新增中文软体键盘长按“EN/123”键可快速切换到半型符号键盘
 	
 		LIME中文输入法Facebook粉丝专页\n
 		http://facebook.com/limeime/\n\n
