--- a/limehd/res/values-zh/strings.xml
+++ b/limehd/res/values-zh/strings.xml
@@ -362,7 +362,7 @@
     <string name="l3_tab_initial_error">下載失敗，請確認裝置已連上網路.</string>
     <string name="l3_tab_initial_message">請點選 [預載資料庫] OR [空白資料庫] 鍵下載 LIME 資料庫或點選 [還原資料庫] 鍵由備份檔案中還原</string>
     <string name="l3_initial_btn_load_empty_db">空白資料庫</string>
-    <string name="l3_initial_btn_load_phonetic_only_db">僅含注音資料庫</string>
+    <string name="l3_initial_btn_load_phonetic_only_db">僅含注音資料庫(連打字根)</string>
     <string name="l3_initial_btn_load_phonetic_hs_only_db">僅含注音+華象直覺資料庫</string>
     <string name="l3_initial_btn_load_preload_db">預載資料庫 \n注音, 倉頡, 倉頡五代 \n快倉, 大易, 輕鬆　　\n行列, 行列 １０　 　</string>
     <string name="l3_initial_btn_reset_db">重置資料庫</string>
@@ -580,19 +580,17 @@
 	<string name="release_note">
 	    \n** 若文字無法正確輸入，建議您重置資料庫並重新下載或匯入字根檔案, 如果選字與送出的字不同，請關閉喜好設定的中文簡/繁體字碼轉換.\n
 	    \n版本更新說明
-	    \n3.7.3-300
-	    \n1. 修正「啟動選取排序」或「實體鍵盤啟動選取排序」未勾選時，候選字未依對照表匯入字序列出
-		\n2. 修正實體鍵盤使用注音輸入法，無法用 space 輸入一聲
-		\n3. 調整行列的實體鍵盤選字鍵為 !@#$%^&amp;*()
-		\n4. 調整英文虛擬鍵盤的popup符號小鍵盤加上 : 及 ; (英文模式長按 . 或中文模式 shift 後長按 > )
-		\n5. 調整候選列顯示
-		\n6. 「先啟動英文選項」改為「記憶中英模式」，進入輸入區時會使用上一次的中文或英文模式
-		\n7. 可用 Zippy BT-540S 鍵盤的地球鍵 (語言切換鍵)，或外接鍵盤的 WinKey+Space 切換中文/英文輸入模式
-		\n8. 新增雙色文字虛擬鍵盤  
-		\n9. 新增華象直覺輸入法反查
-		\n10. 新增注音、倉頡 CNS11643 輸入法字根快速下載，請至輸入法管理中操作 (Andoid系統字型需更換，否則大部份文字無法顯示)
-		\n11. 新增喜好設定自動備份，重裝 LIME-HD 時自動恢復喜好設定 (需 Android 4.0，部份裝置未支援)
-		\n12. 新增 Google 雲端備份及還原資料庫功能 (使用 Google Docs)
+	    
+		\n3.8.1-311
+		\n1. 修正候選列展開後，畫面亂掉問題
+		\n2. 修正連打學習及注音快拼學習問題
+		\n3. 修正候選列候選字 cache 移除問題
+		\n4. 修正字根對照表匯入問題
+		\n5. 修正 Milestone 2 實體鍵盤 ALT 組合鍵問題
+		\n6. 修改許氏注音及倚天26/41鍵注音資料庫查詢方式，提升反應速度
+		\n7. 修改檔案選取模組，已可選取設備有內建空間的外接sdcard上的檔案
+		\n8. 新增許氏注音及倚天26鍵注音符號軟體鍵盤
+		\n9. 新增中文軟體鍵盤長按「EN/123」鍵可快速切換到半型符號鍵盤
 	
 		LIME中文輸入法Facebook粉絲專頁\n
 		http://facebook.com/limeime/\n\n
