--- a/limehd/res/values/strings.xml
+++ b/limehd/res/values/strings.xml
@@ -643,6 +643,7 @@
 	    \n版本更新說明
 	    
 		\n3.8.1-311
+		\n〔提升文字查詢速度 ，請重匯字根檔案或下載預載資料庫]
 		\n1. 修正候選列展開後，畫面亂掉問題
 		\n2. 修正連打學習及注音快拼學習問題
 		\n3. 修正候選列候選字 cache 移除問題
