--- a/trunk/limehd/res/values-zh-rCN/strings.xml
+++ b/trunk/limehd/res/values-zh-rCN/strings.xml
@@ -590,6 +590,7 @@
 	    \n版本更新说明
 	    
 		\n3.8.1-311
+		\n〔提升文字查询速度 ，请重汇字根档案或下载预载资料库]
 		\n1. 修正候选列展开后，画面乱掉问题
 		\n2. 修正连打学习及注音快拼学习问题
 		\n3. 修正候选列候选字 cache 移除问题
